# relabelKL

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  README.Rmd  README.md  appveyor.yml  configure  configure.ac
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  array_traceplot.R  data.R  extract_n_combine.R  globals.R  permuteMCMC.R  relabel.output.R  relabel.stanfit.R  relabelKL.R  relabelMCMC.R  relabelTRUE.R  to_stan_array.R  zzz.R
autom4te.cache/: output.0  requests  traces.0
data/: mmsbm.rda
man/: array_traceplot.Rd  extract_n_combine.Rd  kl_relabel-package.Rd  lse.Rd  mmsbm.Rd  permute.stanfit.Rd  permuteMCMC.Rd  relabel.Rd  relabelKL-package.Rd  relabelMCMC.Rd  relabelTRUE.Rd  relabel_kl.Rd  relabel_kl_log.Rd  relabel_true.Rd  relabel_true_log.Rd  to_stan_array.Rd
src/: .gitignore  Makevars.in  Makevars.win  RcppExports.cpp  Relabel.cpp  Relabel_log.cpp  relabel_kl.cpp  relabel_true.cpp  tmpfun.cpp  utils.cpp  utils.h
tests/: .gitignore  additional_tests.R  testthat.R
tests/testthat/: test_dim_&_comp.R  test_extract_&_monitor.R
